--- a/author.html
+++ b/author.html
@@ -97,7 +97,7 @@ https://templatemo.com/tm-559-zay-shop
                             <a class="text-decoration-none" href="mailto: customersupport@porsche.com"> customersupport@porsche.com</a>
                         </li>
                         <li>
-                            <a class="text-decoration-none" href="PorscheSite.zip"> Download ZIP</a>
+                            <a class="text-decoration-none" href="https://drive.google.com/file/d/1-qD9xJozkX2TPH6Pwqmd0cn2agbhI3u_/view?usp=sharing"> Download ZIP</a>
                         </li>
                         <li>
                             <a class="text-decoration-none" href="documentation.pdf"> Documentation</a>
